Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13663

my_config.h missing in MariaDB-devel-10.2.8-1.el7.centos.x86_64

    XMLWordPrintable

Details

    Description

      I just updated to latest MariaDB version in a VPS (CPanel 66) and when trying to install mysqlclient python package I found out that it does not compile due to this missing header file, I googled a bit and found that this file is in 10.2.7 rpms from fedora (https://rpmfind.net/linux/RPM/fedora/devel/rawhide/x86_64/m/mariadb-devel-10.2.7-8.fc27.x86_64.html) but it seems to be missing in the latest package in Centos MariaDB repo.

      Sorry if this is not the jira project to report it or the way to report, but I did not find a lot of information about reporting MariaDB issues.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            frisco Ramiro Aparicio
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: