Compatibility with MariaDB 10.2

Don't include my_config.h, as that's for servers and not client libraries
    See: https://jira.mariadb.org/browse/MDEV-13663

Then update the one piece of code that was using this:
    https://jira.mariadb.org/browse/MDEV-12950
    https://github.com/PyMySQL/mysqlclient-python/pull/177/commits/d663649f851794dffa84010db6290e693d4baab8